// Copyright 2015 gRPC authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

option go_package = "github.com/kagent/internal/interface/predict";

package predict;

// Interface exported by the server.
service KPredictionService {

  rpc KPredict(KPredictRequest) returns (KPredictResponse) {}

}

message KPredictRequest {
  string model_name = 1;

  string model_version = 2;

  string model_type = 3;

  bytes inputs = 4;

  repeated string output_filter = 5;
}

message KPredictResponse {
  bytes outputs = 1;
}





